--- a/index.html
+++ b/index.html
@@ -6,162 +6,264 @@
     <title>Mystic Gems</title>
     <style>
         body {
-            margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #f9f9f9;
-            overflow-x: hidden;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
 
-        .sidenav {
-            height: 100%;
-            width: 250px;
-            position: fixed;
-            top: 0;
-            left: -250px; 
-            background-color: #333;
-            overflow-x: hidden;
-            transition: 0.3s ease; 
-            z-index: 1000;
-            padding-top: 20px;
-        }
-
-        .sidenav button {
-            display: block;
-            color: white;
-            background-color: #333;
-            padding: 12px 20px;
-            font-size: 1em;
-            border: none;
-            text-align: left;
-            width: 100%;
-            cursor: pointer;
-            border-bottom: 1px solid #444;
-        }
-
-        .sidenav button:hover {
-            background-color: #575757;
-        }
-
-        .menu-btn {
-            background-color: #333;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            cursor: pointer;
-            position: fixed;
-            top: 20px;
-            left: 20px;
-            z-index: 1100;
-            font-size: 16px;
-            border-radius: 5px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-        }
-
-        .menu-btn:hover {
-            background-color: #444;
-        }
-
-        header {
-            background-color: #222;
-            color: white;
+        header, footer {
+            background-color: #d3d3e4;
+            color: #333;
             text-align: center;
             padding: 20px;
+            flex-shrink: 0;
         }
 
-        .hero-section {
+        .container {
+            flex: 1;
             display: flex;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-            height: 80vh; 
-            background: url('mystic-gems.jpg') no-repeat center center/cover;
             position: relative;
         }
 
-        .hero-content {
-            background: rgba(0, 0, 0, 0.6); 
-            padding: 20px;
-            border-radius: 10px;
-            color: white;
-            max-width: 600px;
-        }
-
-        .hero-content h1 {
-            font-size: 2.5em;
-            margin-bottom: 10px;
-        }
-
-        .hero-content p {
-            font-size: 1.1em;
-            margin-bottom: 20px;
-            line-height: 1.6;
-        }
-
-        .shop-now-btn {
-            display: inline-block;
-            padding: 10px 25px;
-            background-color: #ff7f50;
-            color: white;
-            text-decoration: none;
-            font-size: 1em;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-        }
-
-        .shop-now-btn:hover {
-            background-color: #ff4500;
-        }
-
-        footer {
-            background-color: #222;
-            color: white;
-            text-align: center;
-            padding: 20px;
+        nav {
             position: fixed;
-            bottom: 0;
+            left: -200px;
+            width: 200px;
+            height: 100%;
+            background-color: #333;
+            color: #fff;
+            padding: 10px;
+            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
+            transition: left 0.3s ease;
+            z-index: 1000;
+        }
+
+        nav a {
+            display: block;
+            color: #fff;
+            text-decoration: none;
+            margin: 10px 0;
+            font-weight: bold;
+        }
+
+        nav a:hover {
+            text-decoration: underline;
+        }
+
+        nav.active {
+            left: 0;
+        }
+
+        .menu-toggle {
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            background-color: #333;
+            width: 30px;
+            height: 30px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            align-items: center;
+            padding: 5px;
+            border-radius: 5px;
+            cursor: pointer;
+            z-index: 1001;
+        }
+
+        .menu-toggle div {
             width: 100%;
+            height: 4px;
+            background-color: #fff;
+        }
+
+        main {
+            flex: 1;
+            margin-left: 0;
+            padding: 20px;
+            transition: margin-left 0.3s ease;
+            width: 100%;
+        }
+
+        nav.active + main {
+            margin-left: 200px;
+        }
+
+        .hero-section {
+            text-align: center;
+            padding: 50px 20px;
+            background-color: #f9f9f9;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        .slider {
+            display: flex;
+            overflow: hidden;
+            width: 100%;
+            max-width: 800px;
+            margin: 20px auto;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        .slide {
+            flex: 0 0 100%;
+            padding: 20px;
+            text-align: center;
+            background: #f9f9f9;
+            transition: transform 0.5s ease-in-out;
+        }
+
+        .slider-controls {
+            text-align: center;
+            margin-top: 10px;
+        }
+
+        .slider-controls button {
+            padding: 10px 20px;
+            margin: 5px;
+            background-color: #333;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+        }
+
+        .slider-controls button:hover {
+            background-color: #555;
+        }
+
+        .products {
+            margin-top: 50px;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: center;
+        }
+
+        .product-card {
+            width: 300px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            padding: 20px;
+            text-align: center;
+            background: #f9f9f9;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .product-card img {
+            width: 100%;
+            height: auto;
+            border-radius: 5px;
+        }
+
+        .product-card h3 {
+            margin: 10px 0;
+        }
+
+        .product-card button {
+            padding: 10px 20px;
+            background-color: #333;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+        }
+
+        .product-card button:hover {
+            background-color: #555;
         }
     </style>
 </head>
 <body>
-    <button class="menu-btn" onclick="toggleNav()">Menu</button>
-
-    <div class="sidenav" id="sidenav">
-        <button onclick="location.href='#home'">Home</button>
-        <button onclick="location.href='#products'">Products</button>
-        <button onclick="location.href='#new-arrivals'">New Arrivals</button>
-        <button onclick="location.href='#special-offers'">Special Offers</button>
-        <button onclick="location.href='#about-us'">About Us</button>
-        <button onclick="location.href='#contact-us'">Contact Us</button>
-    </div>
-
     <header>
-        <h1>Mystic Gems</h1>
+        <h1> Mystic Gems</h1>
+        <p>Discover the magic of crystals with our exclusive collection.</p>
     </header>
 
-    <main>
-        <div class="hero-section">
-            <div class="hero-content">
-                <h1>Welcome to Mystic Gems</h1>
-                <p>Discover the enchanting world of crystals, gemstones, and mystical energies. Explore our collection and find the perfect gem to elevate your spirit and style.</p>
-                <a href="#shop" class="shop-now-btn">Shop Now</a>
-            </div>
-        </div>
-    </main>
+    <div class="menu-toggle" onclick="toggleNav()">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+
+    <div class="container">
+        <nav id="sidebar">
+            <a href="#home">Home</a>
+            <a href="#products">Products</a>
+            <a href="#new-arrivals">New Arrivals</a>
+            <a href="#special-offers">Special Offers</a>
+            <a href="#contact">Contact Us</a>
+            <a href="#about">About Us</a>
+        </nav>
+
+        <main>
+            <section id="home" class="hero-section">
+                <h2>Welcome to Our Store!</h2>
+                <div class="slider">
+                    <div class="slide" id="slide1">
+                        <h3>Discover the Magic!</h3>
+                        <p>Shop Now and explore the wonders of crystals.</p>
+                    </div>
+                    <div class="slide" id="slide2">
+                        <h3>Exclusive Offers!</h3>
+                        <p>Get your favorite crystals at discounted prices.</p>
+                    </div>
+                    <div class="slide" id="slide3">
+                        <h3>New Arrivals</h3>
+                        <p>Explore our newest collection today.</p>
+                    </div>
+                </div>
+                <div class="slider-controls">
+                    <button onclick="showSlide(1)">1</button>
+                    <button onclick="showSlide(2)">2</button>
+                    <button onclick="showSlide(3)">3</button>
+                </div>
+            </section>
+
+            <section id="products" class="products">
+                <div class="product-card">
+                    <img src="https://via.placeholder.com/300" alt="Crystal 1">
+                    <h3>Crystal 1</h3>
+                    <p>$10.99</p>
+                    <button>Add to Cart</button>
+                </div>
+                <div class="product-card">
+                    <img src="https://via.placeholder.com/300" alt="Crystal 2">
+                    <h3>Crystal 2</h3>
+                    <p>$12.99</p>
+                    <button>Add to Cart</button>
+                </div>
+                <div class="product-card">
+                    <img src="https://via.placeholder.com/300" alt="Crystal 3">
+                    <h3>Crystal 3</h3>
+                    <p>$15.99</p>
+                    <button>Add to Cart</button>
+                </div>
+            </section>
+        </main>
+    </div>
 
     <footer>
-        <p>&copy; 2025 Mystic Gems. All rights reserved.</p>
+        <p>&copy; 2025 Mystic Gems. All Rights Reserved.</p>
     </footer>
 
     <script>
+        let currentSlide = 1;
+
         function toggleNav() {
-            const sidenav = document.getElementById("sidenav");
-            if (sidenav.style.left === "0px") {
-                sidenav.style.left = "-250px";
-            } else {
-                sidenav.style.left = "0px"; 
-            }
+            const nav = document.getElementById('sidebar');
+            nav.classList.toggle('active');
+        }
+
+        function showSlide(slideNumber) {
+            const slides = document.querySelectorAll('.slide');
+            slides.forEach((slide, index) => {
+                slide.style.transform = `translateX(-${(slideNumber - 1) * 100}%)`;
+            });
+            currentSlide = slideNumber;
         }
     </script>
 </body>
